[gd_scene load_steps=9 format=2]

[ext_resource path="res://Imports/crafting.png" type="Texture" id=1]
[ext_resource path="res://craftingtable.gd" type="Script" id=2]
[ext_resource path="res://Objects/Button.gd" type="Script" id=3]
[ext_resource path="res://Imports/Thems/fonts/kenney_mini_square.ttf" type="DynamicFontData" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 125.324

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 2

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 29
font_data = ExtResource( 4 )

[node name="craftingtable" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.515, 0.4375 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = -114.0
margin_top = -123.0
margin_right = 8.0
margin_bottom = -97.0
rect_scale = Vector2( 1.88, 1.84 )
custom_fonts/font = SubResource( 4 )
text = "Creat ID Card"
script = ExtResource( 3 )

[node name="message" type="TextEdit" parent="."]
margin_left = -93.0
margin_top = -160.0
margin_right = 102.0
margin_bottom = -48.0
custom_fonts/font = SubResource( 3 )
text = "You need 
 green box
"

[connection signal="body_entered" from="." to="." method="_on_craftingtable_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_craftingtable_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
